kustomize/instances/overlays/frontend/hipstershop/productcatalog-canary/virtualservices/fault-injection/delay/retry/productcatalog-vs-delay-retry.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: productcatalog-canary-delay-retry-vs
spec:
  hosts:
  - 'productcatalogservice'
  http:
  - route:
    - destination:
        host: productcatalogservice
        subset: v1
      weight: 100
    - destination:
        host: productcatalogservice
        subset: v2
      weight: 0
    retries:
      attempts: 10
      perTryTimeout: 3s
    fault:
      delay:
        percent: 25
        fixedDelay: 15s
